--- a/deployment/env-configmap.yaml
+++ b/deployment/env-configmap.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 data:
-  AWS_BUCKET: my-585565328834-bucket
-  POSTGRES_HOST: postgres.c3zbqidhsnfp.us-east-1.rds.amazonaws.com
+  AWS_BUCKET: my-288576499820-bucket
+  POSTGRES_HOST: postgres.ckabfqce1ic3.us-east-1.rds.amazonaws.com
   URL: http://a41bd1db556be4f7cba5a2e6d3d2e5d4-1687430433.us-west-2.elb.amazonaws.com
 metadata:
   name: env-config-uda
