update config build

--- a/deployment/env-secret.yaml
+++ b/deployment/env-secret.yaml
@@ -7,4 +7,4 @@ data:
   JWT_SECRET: dGVzdGluZw==
   POSTGRES_DB: cG9zdGdyZXM=
   POSTGRES_USERNAME: cG9zdGdyZXM=
-  POSTGRES_PASSWORD: cG9zdGdyZXM=
+  POSTGRES_PASSWORD: cG9zdGdyZXNzcWw=
