--- a/deployment/env-secret.yaml
+++ b/deployment/env-secret.yaml
@@ -3,8 +3,8 @@ kind: Secret
 metadata:
   name: env-security-uda
 type: Opaque
-data:
-  JWT_SECRET: dGVzdGluZw==
-  POSTGRES_DB: cG9zdGdyZXM=
-  POSTGRES_USERNAME: cG9zdGdyZXM=
-  POSTGRES_PASSWORD: cG9zdGdyZXNzcWw=
+stringData:
+  JWT_SECRET: testing
+  POSTGRES_DB: postgres
+  POSTGRES_USERNAME: postgres
+  POSTGRES_PASSWORD: postgressql
