--- a/deployment/env-configmap.yaml
+++ b/deployment/env-configmap.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 data:
-  AWS_BUCKET: bucket-khanglt1
-  POSTGRES_HOST: postgres.ccdtqliog0xr.us-east-1.rds.amazonaws.com
+  AWS_BUCKET: bucket-khanglt2
+  POSTGRES_HOST: rds-udacity.ccdtqliog0xr.us-east-1.rds.amazonaws.com
   URL: http://a41bd1db556be4f7cba5a2e6d3d2e5d4-1687430433.us-west-2.elb.amazonaws.com
 metadata:
   name: env-config-uda
