--- a/deployment/env-secret.yaml
+++ b/deployment/env-secret.yaml
@@ -2,9 +2,10 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: env-security-uda
+  namespace: default  
 type: Opaque
-stringData:
-  JWT_SECRET: testing
-  POSTGRES_DB: postgres
-  POSTGRES_USERNAME: postgres
-  POSTGRES_PASSWORD: postgressql
+data:
+  JWT_SECRET: dGVzdGluZw==
+  POSTGRES_DB: cG9zdGdyZXM=
+  POSTGRES_USERNAME: cG9zdGdyZXM=
+  POSTGRES_PASSWORD: cG9zdGdyZXM=
